# whosaid

./: .gitignore  LICENSE  README.md
core/: README.md  pyproject.toml
core/tests/: test_alignment.py  test_audio.py  test_backend.py  test_chunking.py  test_jobs.py  test_mlx_backend.py  test_models.py  test_server.py  test_server_ws.py  test_store.py  test_transcript.py
core/transcribe_core/: audio.py  backend.py  chunking.py  jobs.py  mlx_backend.py  models.py  server.py  store.py  transcript.py
desktop/: README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  sidecar.rs
desktop/src/lib/: Icon.svelte  ModelManager.svelte  Sidebar.svelte  SpeakerRename.svelte  StageSwitcher.svelte  TranscriptView.svelte  api.test.ts  api.ts  jobState.test.ts  jobState.ts  theme.ts  tokens.css
desktop/src/routes/: +page.svelte
docs/superpowers/plans/: 2026-07-15-per-job-speaker-count-rediarize.md  2026-07-16-apple-restyle-two-stage-panel.md
docs/superpowers/specs/: 2026-07-15-per-job-speaker-count-rediarize-design.md  2026-07-16-apple-restyle-and-two-stage-panel-design.md
